[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "sandbox"
path = "./src/bin/main.rs"
test = false
bench = false

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c6", "log-04", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04", "esp32c6"] }
log = "0.4.27"

esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }
esp-alloc = "0.9.0"
critical-section = "1.2.0"
esp-hal-smartled = { version = "0.17.0", features = ["esp32c6"] }
smart-leds = "0.4.0"
hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", rev = "9009f2c24771ba0a20f8f7534471c9869188f76c", features = [
  "embedded-hal-async",
] }
embedded-hal = "1.0.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
